Fix for #356
Usernames are truncated if longer than max-width.

--- a/kalite/distributed/static/css/distributed/khan-lite.css
+++ b/kalite/distributed/static/css/distributed/khan-lite.css
@@ -166,6 +166,15 @@ nav {
     display: none;
 }
 
+#logged-in-name {
+    display: inline-block;
+    min-width: 10px;
+    max-width: 100px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    vertical-align: bottom;
+}
+
 /********** End of Top Navigation bar ***********/
 
 h2 {
